# gil

./: Cargo.toml  readme.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: git.rs  main.rs  terminal.rs
