[package]
name = "gil"
description = "interactive git log"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/raylu/gil"
readme = "readme.md"
keywords = ["git-log"]
categories = ["command-line-utilities"]
license = "blessing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "7"
chrono = "0.4"
crossterm = "0"
git2 = { version = "0.19", default-features = false }
textwrap = { version = "0", default-features = false, features = ["unicode-linebreak", "unicode-width"]}
tui = { version = "0", package = "ratatui", features = ["unstable-rendered-line-info"] }

[lints.clippy]
needless_return = "allow"
