[package]
name = "gil"
description = "interactive git log"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/raylu/gil"
readme = "readme.md"
keywords = ["git-log"]
categories = ["command-line-utilities"]
license = "blessing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "7"
chrono = "0.4"
crossterm = "0"
git2 = { version = "0.19", default-features = false }
textwrap = { version = "0", default-features = false, features = ["unicode-linebreak", "unicode-width"]}
tui = { package = "ratatui", features = ["unstable-rendered-line-info"], version = "0.29" }
[patch.crates-io]
ratatui = { git = "https://github.com/raylu/ratatui", rev = "d54f0fbccfc9611585d40c1af25d9cb7bd11a7cb", version = "0.29" }

[lints.clippy]
needless_return = "allow"
